# strands-agent-with-streamlit-sample

./: .gitignore  README.md  app.py  my_custom_app.py  pyproject.toml  requirements.txt
.kiro/hooks/: security-review.kiro.hook
.kiro/specs/multi-agent-text2sql/: design.md  requirements.md  tasks.md
.kiro/specs/rag-agent-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
agents/: my_custom_agent.py  strands_agent.py
agents/events/: __init__.py  lifecycle.py  registry.py
agents/events/ui/: cot.py  tools.py
agents/multi_agent/: __init__.py  base_agent.py  constants.py  data_expert_agent.py  event_adapter.py  lead_agent.py  multi_agent_text2sql.py  rag_agent.py  shared_context.py  sql_agent.py  vector_search.py
app/: chat.py  config.py  env_loader.py  main.py  session.py  session_manager.py  ui.py
app/events/: __init__.py  handlers.py  lifecycle.py  registry.py
bird-benchmark/: README.md  requirements.txt
bird-benchmark/data/mini_dev/: .gitignore
bird-benchmark/data/mini_dev/markdown_descriptions/california_schools/: frpm.md  satscores.md  schools.md
bird-benchmark/scripts/: csv_to_markdown.py  generate_gold_results.py  indexer.py  sqlite_upload_to_s3.py
scripts/: evaluate.py
tests/: README_OPENSEARCH_TESTS.md  test_data_expert_agent.py  test_event_adapter.py  test_integration_workflow.py  test_interface_compatibility.py  test_lead_agent.py  test_opensearch_integration.py  test_rag_agent.py  test_rag_agent_error_handling.py  test_sql_agent.py  test_streamlit_flow.py  test_thread_safety.py
(+72 files in other folders)
