[project]
name = "strands-agent-with-streamlit-sample"
version = "0.1.0"
description = "Strands Agent + Streamlit Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.39",
    "strands-agents>=1.15.0",
    "streamlit>=1.50.0",
    "awslabs.aws-dataprocessing-mcp-server",
    "strands-agents-tools",
]
